# FMPy

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  OverrideMSVCFlags.cmake  README.md  README.rst  appveyor.yml  azure-pipelines.yml  bouncingBall.py  build.bat  build_binaries.py  build_cvode.py  build_fmucontainer.py  build_remoting.py  download_binaries.py  merge_wheels.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
cswrapper/: CMakeLists.txt  cswrapper_test.c
fmpy/: CMakeLists.txt  __init__.py  __main__.py  bouncingBall.py  bouncingBall1.py  cc.py  command_line.py  crossCheck.py  cross_check.py  fmi1.py  fmi2.py  fmi3.py  gym_interface.py  modelDescription.py  model_description.py  simulate.py  simulate1.py  simulation.py  util.py  validation.py  values.py
fmpy/c-code/: CMakeLists.txt  FMI.c  FMI.h  FMI1.c  FMI1.h  FMI2.c  FMI2.h  FMI3.c  FMI3.h  fmi2FunctionTypes.h  fmi2Functions.h  fmi2TypesPlatform.h  fmi3FunctionTypes.h  fmi3Functions.h  fmi3PlatformTypes.h
fmpy/c-code/fmi2/: CMakeLists.txt  fmi2_wrapper.c
fmpy/cross_check/: __main__.py  cross_check.py  result_tables.py  utilities.py  validate_vendor_repo.py
fmpy/cswrapper/: __init__.py  license.txt
fmpy/examples/: continue_simulation.py  coupled_clutches.py  custom_input.py  efficient_loops.py  efficient_loops_with_state.py  optimize_eggholder_function.py  parameter_variation.py
fmpy/examples/maggie/: maggie_env.py
fmpy/fmi/: setup.py
fmpy/fmi1/: __init__.py
fmpy/fmi1/schema/: fmiBaseUnit.xsd  fmiScalarVariable.xsd
fmpy/fmi2/: __init__.py
fmpy/fmucontainer/: .gitignore  CMakeLists.txt  __init__.py
fmpy/fmucontainer/sources/: FMUContainer.c
fmpy/fmucontainer/templates/: FMI2.xml  FMI3.xml
fmpy/gui/: MainWindow.py  TableDialog.py  __init__.py  __main__.py  log.py  model.py  simulation.py
fmpy/gui/forms/: AboutDialog.ui  MainWindow.ui  TableDialog.ui
fmpy/gui/icons/: icons.afdesign  icons.qrc  icons2.afdesign  index.theme  toolbar.afdesign  variable-icons.afdesign
fmpy/gym_examples/jaysbuffer/: ai_in_buffer.fmu  jaysbuffer.py
fmpy/logging/: CMakeLists.txt  __init__.py  logging.c
fmpy/logging/darwin64/: logging.dylib
fmpy/logging/linux64/: .gitignore
fmpy/logging/win64/: .gitignore
fmpy/modelica/: __init__.py  __main__.py
fmpy/modelica/FMI/: ExternalFMU.mo  Internal.mo  ModelicaFunctions.mo  package.mo  package.order
fmpy/modelica/templates/: FMI2_CS.mo  FMI2_ME.mo  FMI3_CS.mo  FMI3_ME.mo  FMU.mo
fmpy/remoting/: license.txt
fmpy/schema/fmi1/: fmiModelDescription.xsd  fmiType.xsd
fmpy/schema/fmi3/: fmi3Annotation.xsd  fmi3AttributeGroups.xsd  fmi3BuildDescription.xsd  fmi3FMUType.xsd  fmi3InterfaceType.xsd  fmi3ModelDescription.xsd  fmi3Terminal.xsd  fmi3TerminalsAndIcons.xsd  fmi3Type.xsd  fmi3Unit.xsd  fmi3Variable.xsd  fmi3VariableDependency.xsd
fmpy/ssp/: simulate.py  simulation.py  ssd.py
fmpy/ssp/examples/: controlled_drivetrain.py
fmpy/ssp/schema/: SystemStructureCommon.xsd  SystemStructureDescription.xsd  SystemStructureDescription11.xsd  SystemStructureParameterMapping.xsd  SystemStructureParameterValues.xsd  SystemStructureSignalDictionary.xsd
fmpy/sundials/: __init__.py  cvode.py  cvode_ls.py  libraries.py  nvector_serial.py  sundials_version.py
fmpy/sundials/darwin64/: sundials_cvode.dylib  sundials_nvecserial.dylib
fmpy/sundials/x86_64-darwin/: sundials_cvode.dylib  sundials_nvecserial.dylib  sundials_sunlinsoldense.dylib  sundials_sunmatrixdense.dylib
fmpy/tests/: test_fmu_info.py
fmpy/webapp/: __main__.py
native/container-fmu/container-fmu/: Cargo.toml  build.rs
native/remoting/: CMakeLists.txt  README.md  client.c  client.h  client_tcp.cpp  client_test.cpp  communication.c  communication.h  gen_sizeof.py  process.c  process.h  remote.c  remote.h  server.c  server.h  server_tcp.cpp  test_server.c  test_sizeof.c  types.txt  version.h.in
native/src/: .gitignore  CMakeLists.txt
native/src/cswrapper/: cswrapper.c
native/src/fmucontainer/: FMUContainer.c  FMUContainer.h  fmi2Functions.c  fmi3Functions.c
native/src/logging/: logging.c
remoting/: .gitignore  CMakeLists.txt  README.md  build.bat  build_local.bat  build_remoting.py  client.c  client.cpp  client.h  client_sm.cpp  client_tcp.cpp  client_test.cpp  communication.c  communication.h  config.h.in  gen_sizeof.py  process.c  process.h  remote.c  remote.h  remoting.h  remoting_sm.h  remoting_tcp.h  server.c  server.cpp  server.h  server_sm.cpp  server_tcp.cpp  test_server.c  test_sizeof.c  version.h
remoting/client/: CMakeLists.txt  client.cpp  client_test.cpp
remoting/server/: CMakeLists.txt  server.cpp
src/: CMakeLists.txt
src/cswrapper/: .gitignore  cswrapper.c
src/fmpy/: __init__.py  __main__.py  build.py  cli.py  command_line.py  fmi1.py  fmi2.py  fmi3.py  model_description.py  simulation.py  template.py  util.py  validation.py
src/fmpy/c-code/: CMakeLists.txt  fmi1Functions.h  fmi2Functions.h
src/fmpy/container_fmu/: __init__.py  cli.py  config.py
src/fmpy/cross_check/: __init__.py  __main__.py  cross_check.py  validate_vendor_repo.py
src/fmpy/cswrapper/: __init__.py
src/fmpy/examples/: continue_simulation.py  coupled_clutches.py  custom_input.py  efficient_loops.py  parameter_variation.py
src/fmpy/gui/: BuildDialog.py  BuildThread.py  GenerateFMUDialog.py  MainWindow.py  NewFMUDialog.py  TableDialog.py  __init__.py  __main__.py  log.py  model.py  simulation.py
src/fmpy/logging/: __init__.py
src/fmpy/ssp/: simulate.py  simulation.py  ssd.py
src/fmpy/sundials/: __init__.py  cvode.py  cvode_ls.py  libraries.py  nvector_serial.py  sundials_context.py  sundials_linearsolver.py  sundials_matrix.py  sundials_nvector.py  sundials_types.py  sundials_version.py  sunlinsol_dense.py  sunmatrix_dense.py
src/fmpy/templates/: buildDescription.xml  model.c  modelDescription.xml
src/fmucontainer/: FMUContainer.c  FMUContainer.h  fmi2Functions.c  fmi3Functions.c
src/modelica/: ModelicaFMI.c  ModelicaFMI.h  ModelicaFMI2.c  ModelicaFMI2.h  ModelicaFMI3.c  ModelicaFMI3.h  ModelicaUtilities.c  ModelicaUtilities.h
(+362 files in other folders)
